feat: add README.md and properly generate swagger docs
